add live db url

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI="mongodb://localhost:27017/music-list"
+# MONGO_URI="mongodb://localhost:27017/music-list"
+MONGO_URI="mongodb+srv://harshitakorat:harshitakorat@cluster0.e95wkk1.mongodb.net/music-list"
 JWT_SECRET="music-list"
 
 SPOTIFY_CLIENT_ID=93592875151f48e38f9aebe3f360225e
